fixed issue with title of card not centered

--- a/src/App.css
+++ b/src/App.css
@@ -147,6 +147,7 @@
 }
 
 .card-head-text {
+  text-align: center;
   font-weight: 700;
   font-size: 1.4vw;
 }
